force-app/main/default/objects/Opportunity/fields/Documentation_Type__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Type__c</fullName>
    <label>Documentation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement for Inventory Finance</fullName>
            </value>
            <value>
                <fullName>Conditional Sales Agreement</fullName>
            </value>
            <value>
                <fullName>Cost-Per-Procedure</fullName>
            </value>
            <value>
                <fullName>Co-Terminous Addendum</fullName>
            </value>
            <value>
                <fullName>CPC Agreement</fullName>
            </value>
            <value>
                <fullName>Equipment Lease Agreement</fullName>
            </value>
            <value>
                <fullName>Fee per Procedure</fullName>
            </value>
            <value>
                <fullName>Finance Agreement</fullName>
            </value>
            <value>
                <fullName>Finance Order (Rental Fleet)</fullName>
            </value>
            <value>
                <fullName>Flex Lease Agreement</fullName>
            </value>
            <value>
                <fullName>HW Installment Payment Agreement</fullName>
            </value>
            <value>
                <fullName>Installment Payment Agreement</fullName>
            </value>
            <value>
                <fullName>Lease Agreement</fullName>
            </value>
            <value>
                <fullName>Loan &amp; Security Agreement</fullName>
            </value>
            <value>
                <fullName>Loan Agreement</fullName>
            </value>
            <value>
                <fullName>Master Installment Payment Agreement</fullName>
            </value>
            <value>
                <fullName>Master Lease Agreement</fullName>
            </value>
            <value>
                <fullName>Master Lease Schedule $OUT</fullName>
            </value>
            <value>
                <fullName>Master Lease Schedule FMV</fullName>
            </value>
            <value>
                <fullName>Master Lease Schedule Stated</fullName>
            </value>
            <value>
                <fullName>Master Rental Agreement</fullName>
            </value>
            <value>
                <fullName>Master Schedule</fullName>
            </value>
            <value>
                <fullName>Master Schedule Auto Commence</fullName>
            </value>
            <value>
                <fullName>MIPA Schedule</fullName>
            </value>
            <value>
                <fullName>MLA Schedule $OUT</fullName>
            </value>
            <value>
                <fullName>MLA Schedule FMV</fullName>
            </value>
            <value>
                <fullName>MLA Schedule FPPO</fullName>
            </value>
            <value>
                <fullName>Print At Your Service Subscription Agreement</fullName>
            </value>
            <value>
                <fullName>Rental Agreement</fullName>
            </value>
            <value>
                <fullName>Rental Lease Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>