force-app/main/default/objects/Opportunity/fields/Documents_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Documents_Received_Date__c</fullName>
    <description>Date documents were received</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Documents Received Date</label>
    <type>Date</type>
</CustomField>