force-app/main/default/objects/Opportunity/fields/DocuSign__c.field-meta.xml
<CustomField>
    <fullName>DocuSign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the application was done through Docusign.</description>
    <label>DocuSign</label>
    <type>Checkbox</type>
</CustomField>