force-app/main/default/objects/Opportunity/fields/Doing_Business_As__c.field-meta.xml
<CustomField>
    <fullName>Doing_Business_As__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Doing Business As</label>
    <type>TextArea</type>
</CustomField>