force-app/main/default/objects/Opportunity/fields/Drivers_for_finance_request__c.field-meta.xml
<CustomField>
    <fullName>Drivers_for_finance_request__c</fullName>
    <description>NBD</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Drivers for finance request</label>
    <type>TextArea</type>
</CustomField>