force-app/main/default/objects/Opportunity/fields/End_User__c.field-meta.xml
<CustomField>
    <fullName>End_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field to look up an existing Customer</inlineHelpText>
    <label>End User Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (End User)</relationshipLabel>
    <relationshipName>Opportunities_End_User</relationshipName>
    <type>Lookup</type>
</CustomField>