force-app/main/default/objects/Opportunity/fields/End_User_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>End_User_Company_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Use this field when the customer does not exist in Salesforce</inlineHelpText>
    <label>End User Name (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>