force-app/main/default/objects/Opportunity/fields/End_User_Phone__c.field-meta.xml
<CustomField>
    <fullName>End_User_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End User Phone</label>
    <type>Phone</type>
</CustomField>