force-app/main/default/objects/Opportunity/fields/EndUserContact_c__c.field-meta.xml
<CustomField>
    <fullName>EndUserContact_c__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End User Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>