force-app/main/default/objects/Opportunity/fields/Enrollment_Steps__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Steps__c</fullName>
    <description>This field is used in the DLL on Demand Partner Portal.</description>
    <label>Enrollment Steps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Review Specs</fullName>
            </value>
            <value>
                <fullName>Complete Asset Details</fullName>
            </value>
            <value>
                <fullName>Review Customer Billing</fullName>
            </value>
            <value>
                <fullName>Request Documents</fullName>
            </value>
            <value>
                <fullName>Submit Documents</fullName>
            </value>
            <value>
                <fullName>Complete Funding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>