force-app/main/default/objects/Opportunity/fields/Equipment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cost of equipment</description>
    <label>Equipment Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>