force-app/main/default/objects/Opportunity/fields/Equipment_Make__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Make__c</fullName>
    <description>Make of the equipment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>