force-app/main/default/objects/Opportunity/fields/Equipment_Model__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>