force-app/main/default/objects/Opportunity/fields/Equipment_Use__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Use__c</fullName>
    <description>How the equipment will be used</description>
    <label>Equipment Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FARM</fullName>
            </value>
            <value>
                <fullName>COMM</fullName>
            </value>
            <value>
                <fullName>PERS</fullName>
            </value>
            <value>
                <fullName>CUST</fullName>
            </value>
            <value>
                <fullName>INDU</fullName>
            </value>
            <value>
                <fullName>Rental Yard</fullName>
            </value>
            <value>
                <fullName>Forestry</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>