force-app/main/default/objects/Opportunity/fields/Equipment_Year__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Year__c</fullName>
    <description>Represents the Year of Equipment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>