force-app/main/default/objects/Opportunity/fields/Estimated_number_of_transactions_TTC__c.field-meta.xml
<CustomField>
    <fullName>Estimated_number_of_transactions_TTC__c</fullName>
    <description>NBD</description>
    <label>Estimated number of transactions TTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>