force-app/main/default/objects/Opportunity/fields/Existing_Match__c.field-meta.xml
<CustomField>
    <fullName>Existing_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Match</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>