force-app/main/default/objects/Opportunity/fields/Expected_Credit_Line__c.field-meta.xml
<CustomField>
    <fullName>Expected_Credit_Line__c</fullName>
    <label>Expected Credit Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>