force-app/main/default/objects/Opportunity/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <businessOwnerUser>mmikael.franzen@dllgroup.com.st01d06</businessOwnerUser>
    <description>It contains the valid to date from synced quote</description>
    <formula>SyncedQuote.Valid_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It contains the valid to date from synced quote</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>