force-app/main/default/objects/Opportunity/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Date the Credit Approval Expires</description>
    <formula>Application_Date__c + 61</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Approval Expiration</label>
    <type>Date</type>
</CustomField>