force-app/main/default/objects/Opportunity/fields/Financed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Financed_Amount__c</fullName>
    <businessOwnerUser>mmikael.franzen@dllgroup.com.st01d06</businessOwnerUser>
    <description>It contains the synced quote financed amount</description>
    <formula>SyncedQuote.Financed_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It contains the synced quote financed amount</inlineHelpText>
    <label>Financed Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>