force-app/main/default/objects/Opportunity/fields/Focus_Countries__c.field-meta.xml
<CustomField>
    <fullName>Focus_Countries__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Focus Countries</label>
    <type>TextArea</type>
</CustomField>