force-app/main/default/objects/Opportunity/fields/FORMULA_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_AMOUNT__c</fullName>
    <formula>TEXT(Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FORMULA AMOUNT</label>
    <type>Text</type>
</CustomField>