force-app/main/default/objects/Opportunity/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>Lease terms</description>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MONTHLY</fullName>
            </value>
            <value>
                <fullName>ANNUAL</fullName>
            </value>
            <value>
                <fullName>SEMIANNUAL</fullName>
            </value>
            <value>
                <fullName>QUARTERLY</fullName>
            </value>
            <value>
                <fullName>SKIP</fullName>
            </value>
            <value>
                <fullName>UNEQUAL</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>