force-app/main/default/objects/Opportunity/fields/Funded_Date__c.field-meta.xml
<CustomField>
    <fullName>Funded_Date__c</fullName>
    <description>Fed from data source.  Meant to drive the close date if populated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Funded Date</label>
    <type>Date</type>
</CustomField>