force-app/main/default/objects/Opportunity/fields/Funding_Notes__c.field-meta.xml
<CustomField>
    <fullName>Funding_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Funding Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>