force-app/main/default/objects/Opportunity/fields/GFC_Program__c.field-meta.xml
<CustomField>
    <fullName>GFC_Program__c</fullName>
    <formula>CONTAINS(UNQ_Program__c,&apos;GFC&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GFC Program?</label>
    <type>Checkbox</type>
</CustomField>