force-app/main/default/objects/Opportunity/fields/IL_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>IL_Contract_Number__c</fullName>
    <description>Temp Field to track Contract Number for DSM users.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Des Moines Infolease Contract Number</inlineHelpText>
    <label>IL Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>