force-app/main/default/objects/Opportunity/fields/Interest_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Start_Date__c</fullName>
    <description>Date interest starts on loan</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Interest Start Date</label>
    <type>Date</type>
</CustomField>