force-app/main/default/objects/Opportunity/fields/Internal_Credit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Credit_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>These are the internal credit comments coming from middle office</inlineHelpText>
    <label>Internal Credit Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>