force-app/main/default/objects/Opportunity/fields/Is_Public_Finance__c.field-meta.xml
<CustomField>
    <fullName>Is_Public_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Public Finance</label>
    <type>Checkbox</type>
</CustomField>