force-app/main/default/objects/Opportunity/fields/ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>ISO_Code__c</fullName>
    <businessOwnerUser>mmikael.franzen@dllgroup.com.st01d06</businessOwnerUser>
    <description>ISO code of quote for customer</description>
    <formula>TEXT(Account.Region_Relationship__r.ISO_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ISO code of quote for customer</inlineHelpText>
    <label>ISO Code</label>
    <type>Text</type>
</CustomField>