force-app/main/default/objects/Opportunity/fields/Last_Month_Funded__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Funded__c</fullName>
    <description>Formula field used for reporting Year over Year results</description>
    <formula>MONTH(TODAY())-1 = MONTH( Funded_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Month Funded</label>
    <type>Checkbox</type>
</CustomField>