force-app/main/default/objects/Opportunity/fields/Last_Month_Received__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Received__c</fullName>
    <description>Formula field used for reporting year over year results</description>
    <formula>MONTH(TODAY())-1 = MONTH( Application_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Month Received</label>
    <type>Checkbox</type>
</CustomField>