force-app/main/default/objects/Opportunity/fields/Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Type__c</fullName>
    <description>Type of Equipment Lease</description>
    <inlineHelpText>Type of Equipment Lease</inlineHelpText>
    <label>Lease Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fair Market Value ( FMV )</fullName>
            </value>
            <value>
                <fullName>$1 Buy out</fullName>
            </value>
            <value>
                <fullName>FPPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>