force-app/main/default/objects/Opportunity/fields/Legacy_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Opportunity_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Legacy Opportunity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>