force-app/main/default/objects/Opportunity/fields/Legal_Entity_Description__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Description__c</fullName>
    <description>Captures the name of the DLL Legal Entity that is the ultimate parent to the operating sales Business Units managing the Opportunity as a text value. Used in Sharing Rules to permit sharing of Opportunities with Users working within the same Legal Entity. Populated by Apex code.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Entity Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>