force-app/main/default/objects/Opportunity/fields/Lien_Payout__c.field-meta.xml
<CustomField>
    <fullName>Lien_Payout__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Lien Payout amount</description>
    <label>Lien Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>