force-app/main/default/objects/Opportunity/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Identifies Country Origin to allow for sharing model to segregate data by Country</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>