force-app/main/default/objects/Opportunity/fields/Mid_Market__c.field-meta.xml
<CustomField>
    <fullName>Mid_Market__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mid-Market</label>
    <type>Checkbox</type>
</CustomField>