force-app/main/default/objects/Opportunity/fields/Miscellaneous_Notes__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Miscellaneous Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>