force-app/main/default/objects/Opportunity/fields/NBD_Lead__c.field-meta.xml
<CustomField>
    <fullName>NBD_Lead__c</fullName>
    <description>NBD</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NBD Lead</label>
    <length>80</length>
    <type>Text</type>
</CustomField>