force-app/main/default/objects/Opportunity/fields/NBD_Owned__c.field-meta.xml
<CustomField>
    <fullName>NBD_Owned__c</fullName>
    <formula>IF(
CONTAINS(Owner.UserRole.DeveloperName , &quot;New_Business_Development&quot;), 
TRUE,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NBD Owned</label>
    <type>Checkbox</type>
</CustomField>