force-app/main/default/objects/Opportunity/fields/NBM_Third_Year__c.field-meta.xml
<CustomField>
    <fullName>NBM_Third_Year__c</fullName>
    <description>NBD</description>
    <label>NBM (Third Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>