force-app/main/default/objects/Opportunity/fields/NBV_Second_Year__c.field-meta.xml
<CustomField>
    <fullName>NBV_Second_Year__c</fullName>
    <description>NBD</description>
    <label>NBV (Second Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>