force-app/main/default/objects/Opportunity/fields/NBV_Third_Year__c.field-meta.xml
<CustomField>
    <fullName>NBV_Third_Year__c</fullName>
    <label>NBV (Third Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>