force-app/main/default/objects/Opportunity/fields/New_Business_Volume__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Volume__c</fullName>
    <defaultValue>0</defaultValue>
    <description>New Business Volume. Currency field updated by workflow rule, and used in collaborative forecasting</description>
    <label>New Business Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>