force-app/main/default/objects/Opportunity/fields/New_or_Used__c.field-meta.xml
<CustomField>
    <fullName>New_or_Used__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New or Used</label>
    <length>10</length>
    <type>Text</type>
</CustomField>