force-app/main/default/objects/Opportunity/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <description>Nickname given to shell opportunity record when Quote is created from DLL on Demand Portal.
This field is used since existing opportunity name works with workflow.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Nickname given to opportunity</inlineHelpText>
    <label>Nickname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>