force-app/main/default/objects/Opportunity/fields/No_Action_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>No_Action_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>&quot;No Action Letter&quot; Sent</label>
    <type>Checkbox</type>
</CustomField>