force-app/main/default/objects/Opportunity/fields/Number_of_Assets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Assets__c</fullName>
    <businessOwnerGroup>Global_Admins</businessOwnerGroup>
    <description>Total number of assets associated with the application. DLL on Demand populates this during quote conversion and it excludes accessories, but does take into account number of units from the quote.</description>
    <inlineHelpText>Total number of assets associated with the application.</inlineHelpText>
    <label>Number of Assets</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>