force-app/main/default/objects/Opportunity/fields/Opportunity_Comments__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Comments__c</fullName>
    <description>NBD</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Comments</label>
    <type>TextArea</type>
</CustomField>