force-app/main/default/objects/Opportunity/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <businessOwnerUser>mmikael.franzen@dllgroup.com.st01d06</businessOwnerUser>
    <description>Name of the Opportunity</description>
    <formula>IF( $Profile.Name = &apos;Nordics Community Profile&apos;,
   HYPERLINK(&quot;/partners/s/quote?oppId=&quot;&amp; Id, Name,&quot;_self&quot;), 
   HYPERLINK(&quot;/lightning/r/Opportunity/&quot; + Id + &quot;/view&quot;, Name, &quot;_self&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of the Opportunity</inlineHelpText>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>