force-app/main/default/objects/Opportunity/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <businessOwnerGroup>North_America_Admins</businessOwnerGroup>
    <description>This is quote number that is used to reference a group of DLL on Demand quote options. It appears in the Price Quote field in MOSAIC.</description>
    <displayFormat>{YY}{MM}-{0000}</displayFormat>
    <inlineHelpText>This DLL on Demand number represents a set of related quote options, not necessarily a specific record. It is also passed to MOSAIC as the Price Quote value.</inlineHelpText>
    <label>Quote No.</label>
    <type>AutoNumber</type>
</CustomField>