force-app/main/default/objects/Opportunity/fields/Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source__c</fullName>
    <label>Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rabobank</fullName>
            </value>
            <value>
                <fullName>DLL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>