force-app/main/default/objects/Opportunity/fields/OpVendorCode__c.field-meta.xml
<CustomField>
    <fullName>OpVendorCode__c</fullName>
    <description>Vendor code associated with the Account</description>
    <formula>MID(UNQ_Vendor__c, 7, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpVendorCode</label>
    <type>Text</type>
</CustomField>