force-app/main/default/objects/Opportunity/fields/Original_Docs_In__c.field-meta.xml
<CustomField>
    <fullName>Original_Docs_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Docs In</label>
    <type>Date</type>
</CustomField>