force-app/main/default/objects/Opportunity/fields/Partner_Agreement_LAA__c.field-meta.xml
<CustomField>
    <fullName>Partner_Agreement_LAA__c</fullName>
    <description>NBD</description>
    <label>Partner Agreement (LAA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>