force-app/main/default/objects/Opportunity/fields/Partner_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Contact for Partner Sales Rep Name</description>
    <label>Partner Sales Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Partner Sales Rep)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>