force-app/main/default/objects/Opportunity/fields/Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Status__c</fullName>
    <description>A custom field that maps the existing retail record type stages and substages to partner portal user friendly statuses. It’s a read only field for partners. By implementing this as a picklist field populated by automation, the credit application path options can be enabled in future versions of the portal solution.</description>
    <inlineHelpText>Status of the Application.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>