force-app/main/default/objects/Opportunity/fields/Passed_to_Funding_Date__c.field-meta.xml
<CustomField>
    <fullName>Passed_to_Funding_Date__c</fullName>
    <description>Identifies the date the Opportunity was advanced to the Passed to Funding sub-stage in the sales cycle. Set by an automation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Passed to Funding Date</label>
    <type>Date</type>
</CustomField>