force-app/main/default/objects/Opportunity/fields/PO_Issued__c.field-meta.xml
<CustomField>
    <fullName>PO_Issued__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PO Issued</label>
    <type>Date</type>
</CustomField>