force-app/main/default/objects/Opportunity/fields/Pre_Approval__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates  if this is a Pre-Approval.</description>
    <inlineHelpText>Check this box if this is a Pre-Approval. This box will un-check once an opportunity moves to Docs Out Stage for tracking purposes</inlineHelpText>
    <label>Pre-Approval</label>
    <type>Checkbox</type>
</CustomField>