force-app/main/default/objects/Opportunity/fields/Pre_Qualification_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Pre_Qualification_Application_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Pre Qualification Application Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>